# libvmod-cacheadmission

./: README.md  vmod-cacheadmission.spec
src/: vmod_cacheadmission.vcc
vcl/: ExpLRU.vcl  ThLRU.vcl
vmod/: Makefile.am  configure.ac
vmod/src/: Makefile.am
